Nastavljen list template za dodajanje features

--- a/layouts/download/list.html
+++ b/layouts/download/list.html
@@ -1,4 +1,4 @@
-{{partial "header.html" .}}
+{{ define "main"}}
 <section id="features" class="features section custom-reduce-padding-2 downloads">
         <div class="container" style="margin-top: 80px">
             <div class="row">
@@ -37,4 +37,4 @@
         </div>
     </section>
 
-{{partial "footer.html" .}}
+{{ end }}
