--- a/layouts/features/list.html
+++ b/layouts/features/list.html
@@ -1,4 +1,4 @@
-{{ partial "header.html" . }}
+{{ define "main"}}
 
 <section>
 	{{ partial "feature_panel.html" . }}
@@ -6,4 +6,4 @@
 </section>
 
 
-{{ partial "footer.html" . }}
+{{ end }}
