--- a/layouts/getting-started/list.html
+++ b/layouts/getting-started/list.html
@@ -1,5 +1,4 @@
-{{ partial "header.html" . }}
-
+{{ define "main"}}
     <section id="features" class="features section custom-reduce-padding-2">
         <div class="container">
             <div class="row">
@@ -121,5 +120,4 @@
         </div><!--//container-->
     </section><!--//features-->
 
-    {{ partial "footer.html" . }}
-
+{{ end }}
