--- a/layouts/partials/feature_panel.html
+++ b/layouts/partials/feature_panel.html
@@ -5,20 +5,18 @@
             
            {{ range .Pages.ByWeight }}
             <div class="feature-panel row {{ .Params.css_class }}">
-        <div class='content col-md-6 col-xs-12 feature-description panel-left pull-{{if (eq .Params.text_position "right") }}right{{else }}left{{ end }}'>
+        <div class='content col-md-6 col-xs-12 feature-description pull-{{if (eq .Params.thumbnailImagePosition "left")}}right{{else}}left{{ end }}'>
             <h2 class="feature-title">
-            
-
-            {{ if .Params.more_link }}
-                <a href="{{ .Params.more_link }}">{{ .Title }}</a>
+            {{ if .Params.learnMore }}
+                <a href="{{ .Params.learnMore }}">{{ .Title }}</a>
                 {{else}}
                 {{ .Title }}
                 {{ end }}
             </h2>
             <p class="feature-text">{{ .Content }}</p>
             <div class="more">
-                {{ if .Params.more_link }}
-                <a href="{{ .Params.more_link }}">
+                {{ if .Params.learnMore }}
+                <a href="{{ .Params.learnMore }}">
                     <div class="learn-more feature-block">
 
                         <div class="feature-block feature-link">Learn More</div>
@@ -26,24 +24,25 @@
                 </a>
                 {{ end }}
 
-                {{ if .Params.video_link_tag }}
-                    {{ if .Params.more_link }}
+                {{ if .Params.video }}
+                    {{ if .Params.learnMore }}
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     {{ end }}
-                <a class="lightbox" href="https://www.youtube.com/watch?v={{ .Params.video_link_tag }}&autoplay=1">
+                <a class="lightbox" href="https://www.youtube.com/watch?v={{ .Params.video }}&autoplay=1">
                     <div class="feature-block feature-link">Watch Video</div>
                 </a>
                 {{ end }}
             </div>
         </div>
-        <div class='content col-xs-12 feature-image {{ if (eq .Params.text_position "right")}}{{ else }}panel-right{{ end}}'>
-            {{ if .Params.more_link }}<a href="{{ .Params.more_link }}">{{end}}
-                <img class='image {{ if (eq .Params.text_position "right") }}right{{else }}left{{ end }}' src="{{ .Params.image_link }}">
-            {{ if .Params.more_link }}</a>{{end}}
+        <div class='content col-xs-12 feature-image {{if (eq .Params.thumbnailImagePosition "left") }}{{else }}panel-left{{ end }}'>
+            {{ if .Params.learnMore }}<a href="{{ .Params.learnMore }}">{{end}}
+                <img class='image {{.Params.thumbnailImagePosition}}' src="{{ .Params.thumbnailImage}}">
+            {{ if .Params.learnMore }}</a>{{end}}
         </div>
         
 
-    </div>            
-            {{end}}
+    </div>
+            {{ end }}
+            
         </div>
     </section>
