--- a/layouts/screenshots/list.html
+++ b/layouts/screenshots/list.html
@@ -1,5 +1,4 @@
-{{partial "header.html" .}}
-
+{{ define "main"}}
 
 <section id="features" class="features section custom-reduce-padding-2 screenshots">
         <div class="container">
@@ -31,4 +30,4 @@
         selector: 'a:has(img)'
     });
 </script> -->
-{{ partial "footer.html" . }}
+{{ end }}
