--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,4 +1,5 @@
-{{partial "header.html" .}}
+{{ define "main"}}
+
 
 <section id="documentation" class="features section custom-reduce-padding-2">
     <div class="container">
@@ -21,4 +22,5 @@
     </div>
 
 </section>
-{{ partial "footer.html" . }}
+
+{{end }}
