Sprememba pri prikazu začetne strani

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,11 +1,15 @@
 <html>    
     
     <body>
+
     {{ partial "header.html" . }}
+    <div id="main">
+        <div class="container clear-top">
+		    {{ block "main" .}}
 
-    {{ block "main" .}}
-
-    {{end}}
+		    {{end}}
+		</div>
+	</div>
     {{ partial "footer.html" . }}
     </body>
 </html>
