--- a/layouts/partials/feature_panel.html
+++ b/layouts/partials/feature_panel.html
@@ -1,4 +1,4 @@
-
+{{ define "feature_panel"}}
 <section id="features" class="features section">
         <a id="Orange-Features" class="features-anchor"></a>
         <div class="container">
@@ -46,3 +46,5 @@
             
         </div>
     </section>
+
+    {{ end }}
