--- a/layouts/features/list.html
+++ b/layouts/features/list.html
@@ -1,9 +1,53 @@
 {{ define "main"}}
 
-<section>
-	{{ partial "feature_panel.html" . }}
 
-</section>
+<section id="features" class="features section">
+        <a id="Orange-Features" class="features-anchor"></a>
+        <div class="container">
+            
+           {{ range .Pages.ByWeight }}
+            <div class="feature-panel row {{ .Params.css_class }}">
+        <div class='content col-md-6 col-xs-12 feature-description pull-{{if (eq .Params.thumbnailImagePosition "left")}}right{{else}}left{{ end }}'>
+            <h2 class="feature-title">
+            {{ if .Params.learnMore }}
+                <a href="{{ .Params.learnMore }}">{{ .Title }}</a>
+                {{else}}
+                {{ .Title }}
+                {{ end }}
+            </h2>
+            <p class="feature-text">{{ .Content }}</p>
+            <div class="more">
+                {{ if .Params.learnMore }}
+                <a href="{{ .Params.learnMore }}">
+                    <div class="learn-more feature-block">
+
+                        <div class="feature-block feature-link">Learn More</div>
+                    </div>
+                </a>
+                {{ end }}
+
+                {{ if .Params.video }}
+                    {{ if .Params.learnMore }}
+                        &nbsp;&nbsp;&nbsp;&nbsp;
+                    {{ end }}
+                <a class="lightbox" href="https://www.youtube.com/watch?v={{ .Params.video }}&autoplay=1">
+                    <div class="feature-block feature-link">Watch Video</div>
+                </a>
+                {{ end }}
+            </div>
+        </div>
+        <div class='content col-xs-12 feature-image {{if (eq .Params.thumbnailImagePosition "left") }}{{else }}panel-left{{ end }}'>
+            {{ if .Params.learnMore }}<a href="{{ .Params.learnMore }}">{{end}}
+                <img class='image {{.Params.thumbnailImagePosition}}' src="{{ .Params.thumbnailImage}}">
+            {{ if .Params.learnMore }}</a>{{end}}
+        </div>
+        
+
+    </div>
+            {{ end }}
+            
+        </div>
+    </section>
 
 
 {{ end }}
