--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -16,14 +16,11 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
+{{partial "feature_panel" . }}
 
-{{ block "feature_panel" . }}
-
-{{ end }}
 
 <script>
 function click_features() {
