--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 
     {{ partial "header.html" . }}
     <div id="main">
-        <div class="container clear-top">
+        <div class="container-fluid clear-top">
 		    {{ block "main" .}}
 
 		    {{end}}
