--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,3 @@
- 
-
-{{ partial "head.html" . }}
  <header id="top" class="header navbar-fixed-top">
         <div class="container">
             <h1 class="logo pull-left">
@@ -37,3 +34,28 @@
             </nav><!--//main-nav-->
         </div>
     </header>
+<script>
+ // function click_features(){
+ //    var menu = document.getElementById("menu_feature");
+ //    if (menu.innerHTML == "Home"){
+ //        console.log("pride");
+ //        var elmnt = document.getElementById("promoo");
+ //        console.log(elmnt);
+ //        elmnt.scrollIntoView(true);
+ //    }
+ //    else{
+ //        var elmnt = document.getElementById("features");
+ //        elmnt.scrollIntoView();
+ //        menu.innerHTML = "Home";
+
+ //    }
+        
+        
+        
+ //        // console.log(menu);
+ //        // document.getElementById("menu_feature").onclick = function(){
+ //        //     window.location.href = "/";
+
+ //        // }        
+ //    }
+</script>
