--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -33,7 +33,7 @@
             <div class="feature-panel row {{ .Params.css_class }}">
         <div class='content col-md-6 col-xs-12 feature-description pull-{{if (eq .Params.thumbnailImagePosition "left")}}right{{else}}left{{ end }}'>
             <h2 class="feature-title">
-            {{ if .Params.learnMore }}
+            {{ if isset .Params "learnMore" }}
                 <a href="{{ .Params.learnMore }}">{{ .Title }}</a>
                 {{else}}
                 {{ .Title }}
@@ -41,7 +41,7 @@
             </h2>
             <p class="feature-text">{{ .Content }}</p>
             <div class="more">
-                {{ if .Params.learnMore }}
+                {{ if isset .Params "learnMore" }}
                 <a href="{{ .Params.learnMore }}">
                     <div class="learn-more feature-block">
                         <div class="feature-block fa fa-arrow-circle-o-right jsonly" > </div>
@@ -50,8 +50,8 @@
                 </a>
                 {{ end }}
 
-                {{ if .Params.video }}
-                    {{ if .Params.learnMore }}
+                {{ if isset .Params "video" }}
+                    {{ if isset .Params "learnMore" }}
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     {{ end }}
                 <a class="lightbox" href="https://www.youtube.com/watch?v={{ .Params.video }}&autoplay=1">
@@ -62,9 +62,9 @@
             </div>
         </div>
         <div class='content col-xs-12 feature-image {{if (eq .Params.thumbnailImagePosition "left") }}{{else }}panel-left{{ end }}'>
-            {{ if .Params.learnMore }}<a href="{{ .Params.learnMore }}">{{end}}
+            {{ if isset .Params "learnMore" }}<a href="{{ .Params.learnMore }}">{{end}}
                 <img class='image {{.Params.thumbnailImagePosition}}' src="{{ .Params.thumbnailImage}}">
-            {{ if .Params.learnMore }}</a>{{end}}
+            {{ if isset .Params "learnMore" }}</a>{{end}}
         </div>
         
 
