Added first look of blog, few unused files deleted

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 
 
-<section id="documentation" class="features section custom-reduce-padding-2">
+<section id="documentation" class="features section">
     <div class="container">
         <div class="row">
 
