--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -1,6 +1,6 @@
 {{ define "main"}}
 <div id="promoo">
-<section id="promo" class="promo section offset-header has-pattern">
+<section id="promo" class="promo section has-pattern">
         <div class="container cover-image" style="margin-top:20px;">
             <div class="row">
                 <div class="overview">
