--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -1,7 +1,7 @@
 {{ define "main"}}
 
 
-<section id="documentation" class="features section">
+<section id="documentation" class="features section custom-reduce-padding-2">
     <div class="container">
         <div class="row">
 
