--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,6 +1,20 @@
 {{ define "main"}}
 
 	<div class="container" style="background-color: white; padding-top: 120px;">
+	<div class="post type-post status-publish format-standard hentry category-design tag-memories tag-normal-post tag-standard-2 excerpt zoom full-without-featured excerpt">
+		<div class='excerpt-intro excerpt-header'>
+			<h2 class='excerpt-title'>
+				<a> This is an Intro post </a>
+			</h2>
+		</div>
+		<div class='excerpt-content'>
+			<article>
+				Summary <br>
+				Some more text was required to see what this would properly look like <br>
+				so here it is
+			</article>
+		</div>
+	</div>
 	{{ $paginator := .Paginate (where (where .Pages "Type" "post") "IsPage" true) }}
 	{{ range $index, $element := .Paginator.Pages }}
 	{{ if and (isset .Params "image") .Params.image }}
@@ -56,6 +70,8 @@
 						</article>
 					</div>
 				</div>
+			</div>
+			<div class="hline-separator">
 			</div>
 			{{ end }}
 		</div>
