Download & home page background color fix

--- a/layouts/download/list.html
+++ b/layouts/download/list.html
@@ -17,10 +17,10 @@
             </div><!--//row-->
         </div><!--//container-->
 
-
-        <div class="container" style="margin-top: 60px;">
-            <div class="row">
-                <div class="faq-col col-md-12 col-sm-12 col-xs-12">
+        <div class="container-fluid background-features download-container">
+            <div class="container ">
+<!--             <div class="row">
+ -->                <div class="faq-col col-md-12 col-sm-12 col-xs-12">
                     <div class="content">
                         <h2>Download the latest version for Windows</h2>
                         <a id="recommended-download" style="margin-top: 10px" class="btn btn-warning big-button-base" href="">
@@ -32,9 +32,12 @@
                         <p>Can be used without administrative priviledges.</p>
 
                     </div>
-                </div>
+                <!-- </div> -->
             </div>
         </div>
+
+        </div>
+        
     </section>
 
 {{ end }}
