--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -25,7 +25,7 @@
 
 <!-- class="promo section offset-header has-pattern" -->
 
-<section id="features" class="features section">
+<section id="features" class="features section background-features">
         <a id="Orange-Features" class="features-anchor"></a>
         <div class="container">
             
