Few test blog post copied from Orange, thumbnail images added to blog list

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -31,7 +31,7 @@
 
 				{{ if and (isset .Params "image") .Params.image }}
 				<a class="featured-image-link" href="{{ .Permalink }}"><div class='featured-image lazy lazy-bg-image'>
-					<img src="{{.Params.image}}">
+					<img src="{{.Params.thumbImage}}">
 				</div></a>
 
 				{{ end }}
