Categories display added to blog-single page

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,13 +27,13 @@
           </span>
 
 
-          <!-- {{ range .Params.categories }}
+          {{ range .Params.categories }}
           <span class="category">
             <span> / </span>
 
             <a href="/categories{{ . | relURL }}">{{ . }}</a>
           </span>
-          {{ end }} -->
+          {{ end }}
 
 
         </div>
@@ -48,29 +48,32 @@
           </div>
           
       <div class='entry-meta-bottom'>
+        <span> Written by: 
+        <a>{{ .Params.author | default "" }}</a>
 
- <!--  <div class="entry-categories"><p><span>Categories</span>
+         </span>
+        <br>
+        <!-- <span>Categories: </span>
+        {{ range .Params.categories }}
+        <span>/ </span>
+            <span class="category">
+              <a href="/categories/{{ . | relURL }}">{{ . }}</a>
+            </span>
+            {{ end }} -->
+
+</div>
+<!-- <div class="entry-categories"><p><span>Categories</span>
     {{ range $index, $name := .Params.categories }}
     <a href="{{ "/categories/" | relLangURL }}{{ $name | urlize }}" title="View all posts in {{ $name }}">{{ $name }}</a>{{ end }}
   </p>
 </div> -->
 
-
-
-<!-- <div class="entry-tags"><p><span>Tags</span>
-  {{ range $index, $name := .Params.tags }}
-  <a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}" title="View all posts tagged {{ $name }}">{{ $name }}</a>
-  {{ end }}
-
-</p></div> -->	
-
 </div>
 </div>
 </div>
 </div>
 </div>
-</div>
-
+{{ partial "disqus.html" . }}
 {{end}}
 
 
