Excerpt variable(summary) added to blog post

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -64,7 +64,11 @@
 					</div>
 					<div class='excerpt-content'>
 						<article>
+							{{ if and (isset .Params "excerpt") .Params.excerpt }}
+							{{ .Params.excerpt}}
+							{{else}}
 							{{ .Summary }}
+							{{end}}
 
 							<div class="more-link-wrapper"><a class="more-link" href="{{ .Permalink }}">Read the post<span class="screen-reader-text">This is a Standard Post</span></a></div>
 						</article>
